Fri Nov 12 20:05:48 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* Makefile: push, push-tags, push-gemタグ追加
	* deep-connect.gemspec: バージョン部分再々変更

Fri Nov 12 19:37:21 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* deep-connect.gemspec: バージョン部分変更

Fri Nov 12 17:57:34 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* Makefile: gemタグ追加
	* deep-connect.gemspec: バージョン部分変更

Thu Nov 11 00:00:13 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* README: 追加

Wed Nov 10 23:55:35 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* Makefile: docタグ追加
	* deep-connect.gemspec: summary, description変更
	* doc/deep-connect.{rd,html}: ちょっと充実化した.

Mon Nov  8 18:40:55 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* doc/deep-connect.{rd,html}: ちょっと充実化した.

Thu Nov  4 21:58:30 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* doc/deep-connect.{rd,html}: ちょっと修正
	* Makefile: doc/deep-connect.html タグ追加

Thu Nov  4 20:50:53 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* doc/deep-connect.{rd,html}: 追加
	* deep-connect.gemspec: 上記追加に伴う修正

Thu Oct 28 22:01:34 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* deep-connect.gemspec, .gitignore: gem対応

Fri Oct 22 16:39:36 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* *.rb: コピーライト追加

Fri Oct 22 16:12:45 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* LICENSE: 追加

Fri Oct 22 14:27:52 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* conf.rb: 追加忘れ

Fri Oct 22 00:53:26 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* * deep-connect.rb, class-spec-space.rb, cron.rb, deep-space.rb,
	  evaluator.rb, event.rb, organizer.rb, port.rb, reference.rb,
	  session.rb: DeepConnect::Conf作成に伴う変更.

2010-10-21  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* Makefile: ディレクトリ構成変更に伴う修正
	* Makefile, tools/git-tag: ディレクトリ構成変更に伴う修正
	* .gitignore: ちょっと修正
	* Obsolatesd/* を構成管理下から削除
	* ディレクトリ構成変更(その2)

2010-10-15  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* ディレクトリ構成変更(その1)

2010-03-12  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* DeepSpace#{import_reference_for_disable_gc,