@@ -1,3 +1,8 @@
+Fri Nov 12 20:39:56 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
+
+	* Makefile: push-gem変更
+	* tools/last-package: 追加
+
 Fri Nov 12 20:05:48 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
 
 	* Makefile: push, push-tags, push-gemタグ追加
